# jp_tokenizer

./: .gitignore  README.md  pyproject.toml  test_logs.txt
model_ckpt/: vocab.json  weights.pt
src/jp_tokenizer/: __init__.py  api.py  cli.py  config.py  hybrid.py  lattice.py  pos_en.py  types.py  util.py  viterbi.py
src/jp_tokenizer/dict/: __init__.py  charclasses.py  connection.py  downloader.py  lexicon.py
src/jp_tokenizer/neural/: __init__.py  constraints.py  data_kyoto.py  data_ud.py  io.py  model.py  train.py
tests/: test_checkpoint_legacy.py  test_checkpoint_meta.py  test_force_neural_no_dict.py  test_neural_cost_segment.py
